--- a/sample.org
+++ b/sample.org
@@ -161,17 +161,9 @@ Once signed in, you can set up capture templates that specify header paths (and 
 * Capture URL params and Siri support
 org-web supports a flexible mechanism for capturing using URL parameters. This mechanism integrates very nicely with the new [[https://support.apple.com/guide/shortcuts/welcome/ios][Siri Shortcuts]] feature in iOS 12, allowing you to use Siri to execute capture templates.
 
-You can use [[https://www.icloud.com/shortcuts/8fb4e55d06fd4be1987c2c028b1fbf11][this sample Shortcut]] to get started with this right away in iOS 12. Open the link on your iOS device and click "Get Shortcut". Then open up the Shortcuts app and edit the template by filling in the name of your capture template and org file and recording a Siri trigger.
+You can use [[https://www.icloud.com/shortcuts/4e51e8b748d14a50aa70ac6fb963f775][this sample Shortcut]] to get started with this right away in iOS 12. Open the link on your iOS device and click "Get Shortcut". Then open up the Shortcuts app and edit the template by following the directions in the comments. Then record a Siri trigger and you're good to go!
 
-Alternatively, you can take advantage of the URL parameters yourself to build your own custom capture mechanism. All three parameters are required and must be URL encoded:
-
-- ~captureTemplateName~: the name of the capture template to use. This capture template must already exist in Settings > Capture templates.
-- ~captureFile~: the path (for Dropbox) or id (for Google Drive) of the file in which to execute the capture template.
-- ~captureContent~: the content you'd like to capture. This content will be placed at the cursor position if specified in the capture template (with ~%?~), or at the end of the template if its not specified.
-
-Here's an example URL:
-
-https://org-web.org?captureTemplateName=Grocery%20item&captureContent=Lemon&captureFile=/org/todo.org
+Alternatively, you can take advantage of the URL parameters yourself to build your own custom capture mechanism. You can find more details about this in [[https://github.com/DanielDe/org-web/#capture-params-and-siri-support][the README file]].
 * Syncing
 org-web pulls down your org files from Dropbox or Google Drive. Click the "Sign in" button in the upper right hand corner to sign in with either Dropbox or Google Drive and authenticate org-web.
 ** Symlink your org files
