--- a/changelog.org
+++ b/changelog.org
@@ -1,3 +1,5 @@
+* September 18th, 2018 (afternoon)
+** Parse and display inline markup like ~this~ and +this+ and *this* and /this/
 * September 18th, 2018
 ** Added URL params for capture, specifically for Siri Shortcuts support!
 *** Check out [[https://www.icloud.com/shortcuts/4e51e8b748d14a50aa70ac6fb963f775][this sample Siri Shortcut]] or [[https://github.com/DanielDe/org-web/#capture-params-and-siri-support][the README file]] for more information
