--- a/changelog.org
+++ b/changelog.org
@@ -1,3 +1,6 @@
+* October 31st, 2018
+** Added a "Live sync" setting to automatically push changes as you make them, instead of requiring you to manually sync.
+** Happy halloween!
 * October 22nd, 2018 (afternoon)
 ** Added a [[http://eepurl.com/dK5F9w][mailing list]]! You can also find a link to sign up on the settings screen
 I plan on sending less than 1 email per week, and you can easily unsubscribe at any time!
